--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 student-res/Firebase/serviceAccountKey.json
 student-res/Firebase/serviceAccountKey.json
+student-res/Firebase/serviceAccountKey.json
